# pytest_project

./: pyproject.toml
tests/: test_arrs.py
